# cpp-project

./: CMakeLists.txt  readme.MD
.github/workflows/: ci.yml
src/: main.cpp
